--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,28 +8,65 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.maropost.taxicab"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // Recycler View
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Material Search View
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+
+
+    // For lifecycle and LiveData with ViewModel
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'am.appwise.components:NoInternetDialog:1.1.3'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
+    implementation ('com.alibaba.android:ultraviewpager:1.0.7.7@aar') {
+        transitive = true
+    }
+    implementation "com.android.support:support-dynamic-animation:28.0.0"
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.github.tintinscorpion:CarMarker-Animation:1.1'
+    implementation 'com.github.tintinscorpion:Dual-color-Polyline-Animation:1.0'
+
 }
