--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,22 +51,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:palette-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
-    implementation 'am.appwise.components:NoInternetDialog:1.1.3'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
-    implementation ('com.alibaba.android:ultraviewpager:1.0.7.7@aar') {
-        transitive = true
-    }
-    implementation "com.android.support:support-dynamic-animation:28.0.0"
-    implementation 'com.wang.avi:library:2.1.3'
-    implementation 'com.sothree.slidinguppanel:library:3.4.0'
-    implementation 'com.github.tintinscorpion:CarMarker-Animation:1.1'
-    implementation 'com.github.tintinscorpion:Dual-color-Polyline-Animation:1.0'
+
+    // Runtime Permission
+    implementation 'ru.superjob:kotlin-permissions:1.0.2'
 
 }
